--- a/ProjetFinal/ProjetFinal.UI.HTML/Requetes.html
+++ b/ProjetFinal/ProjetFinal.UI.HTML/Requetes.html
@@ -1,10 +1,110 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
-	<meta charset="utf-8" />
+    <title>Requêtes</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="Content/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
+
+
+    <div class="jumbotron">
+        <h1>Page des requêtes (bootstrap)</h1>
+    </div>
+
+    <!-- Search -->
+    <div class="container">
+        <!--<div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <h1>Expandable Search Form</h1>
+            </div>
+        </div>-->
+        <div class="row">
+            <div class="col-md-4 col-md-offset-3">
+                <form action="" class="search-form">
+                    <div class="form-group has-feedback">
+                        <label for="search" class="sr-only">Search</label>
+                        <input type="text" class="form-control" name="search" id="search" placeholder="Trouver une requête...">
+                        <span class="glyphicon glyphicon-search form-control-feedback"></span>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- End search -->
+    <!-- Queries list -->
+    <!--<h1>exemple de checkbox</h1>
+    <div class="form-group">
+        <label for="sel1">Select list:</label>
+        <select class="form-control" id="sel1">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+        </select>
+    </div>-->
+    <!-- End queries list -->
+
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <h2>Requêtes disponibles</h2>
+                <div class="list-group">
+                    <a id="q1" href="#" class="list-group-item active">Planning des matchs</a>
+                    <a id="q2" href="#" class="list-group-item">Liste des arbitres</a>
+                    <a id="q3" href="#" class="list-group-item">Third item</a>
+                </div> 
+ 
+                <!-- description -->
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a id="queryDescription" data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                                Description
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapse1" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                            commodo consequat.
+                        </div>
+                    </div>
+                </div>
+                <!-- end description -->
+
+            </div>
+            <div class="col-sm-8">
+                <h2 id="resultsTitle">Résultats de la requête selectionnée</h2>
+                <ul id="resultsList" class="list-group">
+                    <li class="list-group-item">Résultats No. 1<span class="badge">12 minutes</span></li>
+                    <li class="list-group-item">Résultats No. 2<span class="badge">5 mois</span></li>
+                    <li class="list-group-item">Résultats No. 3<span class="badge">3 jours</span></li>
+                    <li class="list-group-item">Résultats No. 4<span class="badge">3 jours</span></li>
+                    <li class="list-group-item">Résultats No. 5<span class="badge">3 jours</span></li>
+                    <li class="list-group-item">Résultats No. 6<span class="badge">3 jours</span></li>
+                    <li class="list-group-item">Résultats No. 7<span class="badge">3 jours</span></li>
+                    <li class="list-group-item">Résultats No. 7<span class="badge">3 jours</span></li>
+                </ul>
+                <p id="NbResults" class="small pull-right">Nombre d'enregistrements (7)</p>
+                <button type="button" class="btn btn-primary btn-lg center-block">Exporter</button>
+            </div>
+
+        </div>
+    </div>
+
+    <div id="search"></div>
+
+
+    <script src="scripts/jquery-1.9.1.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
+    <script src="scripts/Requetes.js"></script>
 
 </body>
 </html>
