Gerer html/css/js + FAQ.html

--- a/ProjetFinal/ProjetFinal.UI.HTML/FAQ.html
+++ b/ProjetFinal/ProjetFinal.UI.HTML/FAQ.html
@@ -5,6 +5,19 @@
 	<meta charset="utf-8" />
 </head>
 <body>
+    <div class="jumbotron text-center">
+        <h1>F. A. Q.</h1>
+    </div>
+    <h2>Comment choisir et sélectionner une requête ?</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc finibus ligula a dui bibendum venenatis. Etiam facilisis ut quam nec placerat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent consequat lobortis massa, quis rhoncus augue auctor eu. Maecenas congue, nibh tempus vestibulum rutrum, neque enim convallis sem, in pulvinar ante diam a augue. In aliquet felis vitae interdum eleifend. Sed dictum bibendum justo, ut consequat lorem sollicitudin non. Quisque finibus egestas nibh eu imperdiet. Aliquam erat volutpat. Ut et laoreet purus. </p>
 
+    <h2>Comment récupérer des résultats ?</h2>
+    <p>Quisque scelerisque, arcu ac egestas ultricies, felis felis egestas magna, scelerisque sodales est turpis vitae elit. Curabitur elementum, nisi tempor laoreet interdum, eros velit sollicitudin diam, ut laoreet odio ipsum et dui. Sed porttitor dapibus ultricies. Aenean vitae dignissim orci. Vestibulum consectetur, lectus rutrum feugiat scelerisque, nulla elit lobortis quam, sit amet rutrum purus eros nec dolor. Ut eleifend orci quis tortor feugiat, at commodo tellus faucibus. Ut laoreet mattis est nec bibendum. </p>
+
+    <h2>Comment créer une nouvelle requête ou en modifier une existante ?</h2>
+    <p>Praesent tempus turpis eros, at iaculis sem ultrices et. Integer ut massa eget nulla facilisis efficitur. Maecenas consequat pharetra mollis. Aenean rhoncus efficitur justo, fringilla commodo nunc blandit varius. Vivamus sed maximus ex. Nullam ac auctor arcu. Suspendisse lobortis feugiat eros, sed congue elit suscipit nec. Praesent dapibus leo in finibus laoreet. Ut eleifend dui nec interdum molestie. Proin dui odio, vestibulum at venenatis vehicula, dignissim vitae quam. Donec faucibus nisl congue interdum placerat. Proin lobortis, ipsum eu rhoncus varius, libero est aliquam nulla, eget convallis leo orci sit amet velit.</p>
+
+    <h2>Comment exécuter une nouvelle requête ?</h2>
+    <p>Pellentesque eget nisi suscipit lorem tempor lobortis non ut dui. Morbi vel pellentesque turpis. Suspendisse lobortis diam eget nisi semper fringilla. Nunc at lorem massa. Donec pretium ipsum ante, sed dignissim turpis finibus a. Phasellus felis leo, placerat a suscipit nec, porta id ligula. Donec aliquet, metus nec mollis dignissim, ipsum sem rhoncus purus, et tincidunt orci mi sed massa. Proin rhoncus, ipsum nec egestas porttitor, mi lacus varius mi, id malesuada elit arcu sed est. Maecenas eu metus in nunc dictum pharetra. Praesent sagittis ex nunc, at finibus nibh ornare eu. Nulla dictum nec nunc in eleifend. </p>
 </body>
 </html>
