update Accueil, login

--- a/ProjetFinal/ProjetFinal.UI.HTML/Requetes.html
+++ b/ProjetFinal/ProjetFinal.UI.HTML/Requetes.html
@@ -56,7 +56,9 @@
                 <div class="list-group">
                     <a id="q1" href="#" class="list-group-item active">Planning des matchs</a>
                     <a id="q2" href="#" class="list-group-item">Liste des arbitres</a>
-                    <a id="q3" href="#" class="list-group-item">Third item</a>
+                    <a id="q3" href="#" class="list-group-item">Requête sans nom1</a>
+                    <a id="q4" href="#" class="list-group-item">Requête sans nom2</a>
+                    <a id="q5" href="#" class="list-group-item">Requête sans nom3</a>
                 </div> 
  
                 <!-- description -->
