--- a/ProjetFinal/ProjetFinal.UI.HTML/Accueil.html
+++ b/ProjetFinal/ProjetFinal.UI.HTML/Accueil.html
@@ -3,8 +3,89 @@
 <head>
     <title></title>
 	<meta charset="utf-8" />
+    <link href="Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="styles/site.css" rel="stylesheet" />
 </head>
 <body>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Projet Selenium</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Accueil</a></li>
+                    <!--<li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Page 1-1</a></li>
+                            <li><a href="#">Page 1-2</a></li>
+                            <li><a href="#">Page 1-3</a></li>
+                        </ul>
+                    </li>-->
+                    <li><a href="Requetes.html">Requêtes</a></li>
+                    <li><a href="FAQ.html">FAQ</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
+                    <li><a href="Login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+
+    <div>
+    <h1>Accueil version 1 = menu + footer</h1>
+
+        <!-- Dernieres requêtes -->
+        <div class="col-sm-6">
+            <h2 id="resultsTitle">Dernières requêtes ajoutées</h2>
+            <ul id="resultsList" class="list-group">
+                <li class="list-group-item">Requêtes No.1<span class="badge">12 minutes</span></li>
+                <li class="list-group-item">Requêtes No.2<span class="badge">5 mois</span></li>
+                <li class="list-group-item">Requêtes No.3<span class="badge">3 jours</span></li>
+                <li class="list-group-item">Requêtes No.4<span class="badge">3 jours</span></li>
+                <li class="list-group-item">Requêtes No.5<span class="badge">3 jours</span></li>
+                <li class="list-group-item">Requêtes No.6<span class="badge">3 jours</span></li>
+                <li class="list-group-item">Requêtes No.7<span class="badge">3 jours</span></li>
+                <li class="list-group-item">Requêtes No.7<span class="badge">3 jours</span></li>
+            </ul>
+            <h2>A propos</h2>
+        </div>
+        <!-- End dernieres requêtes -->
+
+        <!-- Dernieres requêtes -->
+        <div class="col-sm-6">
+            <h2 id="resultsTitle">Top 10 des requêtes</h2>
+            <ul id="resultsList" class="list-group">
+                <li class="list-group-item">Requêtes No.1<span class="badge">12 minutes</span></li>
+                <li class="list-group-item">Requêtes No.2<span class="badge">5 mois</span></li>
+                <li class="list-group-item">Requêtes No.3<span class="badge">3 jours</span></li>
+                <li class="list-group-item">Requêtes No.4<span class="badge">3 jours</span></li>
+                <li class="list-group-item">Requêtes No.5<span class="badge">3 jours</span></li>
+                <li class="list-group-item">Requêtes No.6<span class="badge">3 jours</span></li>
+                <li class="list-group-item">Requêtes No.7<span class="badge">3 jours</span></li>
+                <li class="list-group-item">Requêtes No.7<span class="badge">3 jours</span></li>
+            </ul>
+        </div>
+        <!-- End dernieres requêtes -->
+    <footer class="footer">
+        <div class="container">
+            <hr>
+            <p class="text-muted">Projet Selenium 2017.</p>
+            <p class="text-muted">Formation GT'M Ingénierie - Formateur Ali MAKRI</p>
+            <p class="text-muted pull-right">Réalisé par ARNAUD Jonathan et CHERBAL Amin</p>
+        </div>
+    </footer>
+    </div>
+
+    <script src="scripts/jquery-1.9.1.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
 </body>
 </html>
