footer and login update

--- a/ProjetFinal/ProjetFinal.UI.HTML/Accueil.html
+++ b/ProjetFinal/ProjetFinal.UI.HTML/Accueil.html
@@ -57,6 +57,10 @@
                 <li class="list-group-item">Requêtes No.7<span class="badge">3 jours</span></li>
             </ul>
             <h2>A propos</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                            commodo consequat.</p>
         </div>
         <!-- End dernieres requêtes -->
 
@@ -75,14 +79,16 @@
             </ul>
         </div>
         <!-- End dernieres requêtes -->
-    <footer class="footer">
-        <div class="container">
-            <hr>
+
+        <!--footer-->
+        <div class="navbar navbar-fixed-bottom">
+            <!--<hr>-->
             <p class="text-muted">Projet Selenium 2017.</p>
             <p class="text-muted">Formation GT'M Ingénierie - Formateur Ali MAKRI</p>
-            <p class="text-muted pull-right">Réalisé par ARNAUD Jonathan et CHERBAL Amin</p>
+            <p class="text-muted pull-right">Réalisé par ARNAUD Jonathan et CHERBAL Amin </p>
         </div>
-    </footer>
+     
+
     </div>
 
     <script src="scripts/jquery-1.9.1.min.js"></script>
