--- a/ProjetFinal/ProjetFinal.UI.HTML/Login.html
+++ b/ProjetFinal/ProjetFinal.UI.HTML/Login.html
@@ -3,6 +3,7 @@
 <head>
     <title></title>
 	<meta charset="utf-8" />
+    <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="styles/Login.css" rel="stylesheet" />
 </head>
 <body>
@@ -22,12 +23,12 @@
             <label><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="psw" required>
 
-            <button type="submit">Login</button>
+            <button type="submit" class="btn btn-primary btn-lg center-block">Login</button>
             <input type="checkbox" checked="checked"> Remember me
         </div>
 
         <div class="container" style="background-color:#f1f1f1">
-            <button type="button" class="cancelbtn">Cancel</button>
+            <button type="button" class="cancelbtn btn" >Cancel</button>
             <span class="psw">Forgot <a href="#">password?</a></span>
         </div>
     </form>
