--- a/ProjetFinal/ProjetFinal.UI.HTML/Gerer.html
+++ b/ProjetFinal/ProjetFinal.UI.HTML/Gerer.html
@@ -90,5 +90,6 @@
     <script src="scripts/jquery-1.9.1.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
     <script src="scripts/Gerer.js"></script>
+    <script src="scripts/Gerer-Ajax.js"></script>
 </body>
 </html>
