add nav+footer on all pages

--- a/ProjetFinal/ProjetFinal.UI.HTML/FAQ.html
+++ b/ProjetFinal/ProjetFinal.UI.HTML/FAQ.html
@@ -1,10 +1,48 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>FAQ</title>
 	<meta charset="utf-8" />
+    <link href="Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="styles/site.css" rel="stylesheet" />
 </head>
 <body>
+    <!--Menu-->
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="Accueil.html">Projet Selenium</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="Accueil.html">Accueil</a></li>
+                    <!--<li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Page 1-1</a></li>
+                            <li><a href="#">Page 1-2</a></li>
+                            <li><a href="#">Page 1-3</a></li>
+                        </ul>
+                    </li>-->
+                    <li><a href="Requetes.html">Requêtes</a></li>
+                    <li><a href="Gerer.html">Gérer</a></li>
+                    <li><a href="FAQ.html">FAQ</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
+                    <li><a href="Login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!--End menu-->
+
+
     <div class="jumbotron text-center">
         <h1>F. A. Q.</h1>
     </div>
@@ -19,5 +57,18 @@
 
     <h2>Comment exécuter une nouvelle requête ?</h2>
     <p>Pellentesque eget nisi suscipit lorem tempor lobortis non ut dui. Morbi vel pellentesque turpis. Suspendisse lobortis diam eget nisi semper fringilla. Nunc at lorem massa. Donec pretium ipsum ante, sed dignissim turpis finibus a. Phasellus felis leo, placerat a suscipit nec, porta id ligula. Donec aliquet, metus nec mollis dignissim, ipsum sem rhoncus purus, et tincidunt orci mi sed massa. Proin rhoncus, ipsum nec egestas porttitor, mi lacus varius mi, id malesuada elit arcu sed est. Maecenas eu metus in nunc dictum pharetra. Praesent sagittis ex nunc, at finibus nibh ornare eu. Nulla dictum nec nunc in eleifend. </p>
+
+    <!--footer-->
+    <br />
+    <div class="navbar navbar-fixed-bottom">
+        <!--<hr>-->
+        <p class="text-muted text-center">Projet Selenium 2017.</p>
+        <p class="text-muted text-center">Formation GT'M Ingénierie - Formateur Ali MAKRI</p>
+        <p class="text-muted text-center">Réalisé par ARNAUD Jonathan et CHERBAL Amin </p>
+    </div>
+
+
+    <script src="scripts/jquery-1.9.1.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
 </body>
 </html>
