--- a/ProjetFinal/ProjetFinal.UI.HTML/Accueil.html
+++ b/ProjetFinal/ProjetFinal.UI.HTML/Accueil.html
@@ -1,12 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Accueil</title>
 	<meta charset="utf-8" />
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="styles/site.css" rel="stylesheet" />
 </head>
 <body>
+    <!--Menu-->
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -15,11 +16,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Projet Selenium</a>
+                <a class="navbar-brand" href="Accueil.html">Projet Selenium</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Accueil</a></li>
+                    <li class="active"><a href="Accueil.html">Accueil</a></li>
                     <!--<li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -29,6 +30,7 @@
                         </ul>
                     </li>-->
                     <li><a href="Requetes.html">Requêtes</a></li>
+                    <li><a href="Gerer.html">Gérer</a></li>
                     <li><a href="FAQ.html">FAQ</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -38,6 +40,7 @@
             </div>
         </div>
     </nav>
+    <!--End menu-->
 
 
     <div>
@@ -81,11 +84,12 @@
         <!-- End dernieres requêtes -->
 
         <!--footer-->
+        <br />
         <div class="navbar navbar-fixed-bottom">
             <!--<hr>-->
-            <p class="text-muted">Projet Selenium 2017.</p>
-            <p class="text-muted">Formation GT'M Ingénierie - Formateur Ali MAKRI</p>
-            <p class="text-muted pull-right">Réalisé par ARNAUD Jonathan et CHERBAL Amin </p>
+            <p class="text-muted text-center">Projet Selenium 2017.</p>
+            <p class="text-muted text-center">Formation GT'M Ingénierie - Formateur Ali MAKRI</p>
+            <p class="text-muted text-center">Réalisé par ARNAUD Jonathan et CHERBAL Amin </p>
         </div>
      
 
