--- a/ProjetFinal/ProjetFinal.UI.HTML/Login.html
+++ b/ProjetFinal/ProjetFinal.UI.HTML/Login.html
@@ -1,19 +1,56 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
-	<meta charset="utf-8" />
+    <title>Login</title>
+    <meta charset="utf-8" />
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="styles/Login.css" rel="stylesheet" />
+    <link href="styles/site.css" rel="stylesheet" />
 </head>
 <body>
+    <!--Menu-->
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="Accueil.html">Projet Selenium</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="Accueil.html">Accueil</a></li>
+                    <!--<li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Page 1-1</a></li>
+                            <li><a href="#">Page 1-2</a></li>
+                            <li><a href="#">Page 1-3</a></li>
+                        </ul>
+                    </li>-->
+                    <li><a href="Requetes.html">Requêtes</a></li>
+                    <li><a href="Gerer.html">Gérer</a></li>
+                    <li><a href="FAQ.html">FAQ</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
+                    <li><a href="Login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!--End menu-->
 
 
-    <h2>Login Form</h2>
+    <div class="jumbotron">
+        <h1>Login Form</h1>
+    </div>
 
-    <form action="/action_page.php">
+    <form action="">
         <div class="imgcontainer">
-            <img src="img_avatar2.png" alt="Avatar" class="avatar">
+            <img src="images/login-avatar.png" alt="Avatar" class="avatar">
         </div>
 
         <div class="container">
@@ -27,11 +64,26 @@
             <input type="checkbox" checked="checked"> Remember me
         </div>
 
-        <div class="container" style="background-color:#f1f1f1">
-            <button type="button" class="cancelbtn btn" >Cancel</button>
+        <div class="container">
+            <button type="button" class="cancelbtn btn btn-danger">Cancel</button>
             <span class="psw">Forgot <a href="#">password?</a></span>
         </div>
     </form>
 
+    <!--footer-->
+    <br />
+    <div class="navbar navbar-fixed-bottom">
+        <!--<hr>-->
+        <p class="text-muted text-center">Projet Selenium 2017.</p>
+        <p class="text-muted text-center">Formation GT'M Ingénierie - Formateur Ali MAKRI</p>
+        <p class="text-muted text-center">Réalisé par ARNAUD Jonathan et CHERBAL Amin </p>
+    </div>
+
+
+    <script>
+        function login() {
+            alert('login!');
+        }
+    </script>
 </body>
 </html>
