--- a/ProjetFinal/ProjetFinal.UI.HTML/Gerer.html
+++ b/ProjetFinal/ProjetFinal.UI.HTML/Gerer.html
@@ -21,7 +21,7 @@
                 <legend>Liste des requêtes</legend>
                 <div id="QueryList" class="list-group">
                     <a href="#"  id="1" class="list-group-item query" name="query">Requete 1</a>
-                    <label id="2" for="1" hidden="hidden"><span class="glyphicon glyphicon-trash"></span><span class="glyphicon glyphicon-cog"></span></label>
+                  <!-- <label id="2" for="1" hidden="hidden"><span class="glyphicon glyphicon-trash"></span><span class="glyphicon glyphicon-cog"></span></label>-->
                     <a href="#" class="list-group-item query" name="query">Requete 2</a>
                     <a href="#" class="list-group-item query" name="query">Requete 3</a>
                     <a href="#" class="list-group-item query" name="query">Requete 4</a>
