ajax for lists and test files

--- a/ProjetFinal/ProjetFinal.UI.HTML/Accueil.html
+++ b/ProjetFinal/ProjetFinal.UI.HTML/Accueil.html
@@ -87,9 +87,7 @@
         <br />
         <div class="navbar navbar-fixed-bottom">
             <!--<hr>-->
-            <p class="text-muted text-center">Projet Selenium 2017.</p>
-            <p class="text-muted text-center">Formation GT'M Ingénierie - Formateur Ali MAKRI</p>
-            <p class="text-muted text-center">Réalisé par ARNAUD Jonathan et CHERBAL Amin </p>
+            <p class="text-muted text-center">Projet Selenium 2017. Formation GT'M Ingénierie - Formateur Ali MAKRI. Réalisé par ARNAUD Jonathan et CHERBAL Amin </p>
         </div>
      
 
