--- a/ProjetFinal/ProjetFinal.UI.HTML/Gerer.html
+++ b/ProjetFinal/ProjetFinal.UI.HTML/Gerer.html
@@ -50,13 +50,8 @@
                 </div>
                 <button class="btn btn-primary" id="addURL">+</button>
                 <div id="selectedURL">
-                    <label for="selectedURL">URL sélectionnée</label>
+                    <label for="currentURL">URL sélectionnée</label>
                     <div class="textURL" id="currentURL"></div>
-                </div>
-                <div id="urlTextArea">
-                    <label for="addURLField">Ajouter</label>
-                    <textarea id="addURLField"></textarea>
-                    <button id="okURLQuery">Ok</button>
                 </div>
             </fieldset>
         </div>
@@ -71,11 +66,11 @@
                     <a href="#" class="list-group-item selector" name="selector">Selectors 4</a>
                 </div>
                 <button class="btn btn-primary" id="addSelector">+</button>
-            </fieldset>
-            <div class="divTextArea">
-                <label for="currentSelector">Ajouter ou modifier un selecteur</label>
-                <textarea class="textSelector" id="currentSelector"></textarea>
-            </div>
+                <div id="selectedSelector">
+                    <label for="currentSelector">URL sélectionnée</label>
+                    <div class="textSelector" id="currentSelector"></div>
+                </div>
+            </fieldset>           
         </div>
 
         <div id="DatePeremption" class="container col-lg-3">
